tests/ui/error-codes/E0431.stderr
error: imports need to be explicitly named
  --> $DIR/E0431.rs:1:6
   |
LL | use {self};
   |      ^^^^
   |
help: try renaming it with a name
   |
LL | use {self as name};
   |           +++++++

error: aborting due to 1 previous error

